infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  namespace: preview-env-sample
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: env-sample.preview.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app
                port:
                  number: 80
